--- a/client/styles/nav-bar.scss
+++ b/client/styles/nav-bar.scss
@@ -7,8 +7,36 @@
 .nav-container {
     height: 100px;
     width : 100vw;
+    display: flex;
+    
 }
-.nav-logo {
-    height : 50%;
-    width: 50%;
+#nav-logo {
+    height : 100px;
+    width: 15vw;
+}
+.nav-collapse {
+    display : none;
+}
+#navbars {
+    padding-right: 20px;
+    
+    gap: 10px;
+}
+#navbars a{
+    padding: 10px;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+
+}
+#navbars button {
+    padding: 10px;
+    color: rgb(255, 255, 255);
+    background-color: transparent;
+    border: none;
+}
+.nav-dropdown {
+    position: absolute;
+    top :100px; right :0px;
+    padding-right: 15px;
+    background-color: rgb(36, 46, 54);
 }
