--- a/client/styles/nav-bar.scss
+++ b/client/styles/nav-bar.scss
@@ -35,8 +35,8 @@
     border: none;
 }
 .nav-dropdown {
-    position: absolute;
+    position: fixed;
     top :100px; right :0px;
     padding-right: 15px;
-    background-color: rgb(36, 46, 54);
+    background-color:rgb(36, 46, 54);
 }
