--- a/client/styles/nav-bar.scss
+++ b/client/styles/nav-bar.scss
@@ -2,6 +2,9 @@
     position: fixed;
     top: 0;
     background-color:rgb(36, 46, 54);
+    border-bottom-width: 3px;
+    border-bottom-color: black;
+    border-bottom-style: solid;
     
 }
 .nav-container {
