--- a/client/styles/side-bar.scss
+++ b/client/styles/side-bar.scss
@@ -2,7 +2,7 @@
     position: fixed;
     left: 0;
     margin-top: 100px;
-    background-color: blanchedalmond;
+    background-color:rgb(36, 46, 54);
     height: 100vh;
     width: 200px;
 }
@@ -11,12 +11,10 @@
     background-color: transparent;
     margin-top: 50px;
 }
-.side-bar-item :hover{
-    color:red;
-}
+
 .side-bar-active {
-    color:red;
+    color:#f17510;
 }
 .side-bar-inactive {
-    color: blue;
+    color: white;
 }
